--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -46,4 +46,4 @@ workflows:
     publishing:
       email:
         recipients:
-          - lagustinus211@gmail.com
+          - frankywilliam18@gmail.com
